fixed black text on body elements that didn't have specified text color. I think I had some mantine color presets but I was just always feeding dark mode and apparently was only really using the text color... fixed now. Also changed timeline color on scroll. Next up for this project: - stattracker - new project view for mobile maybe, or just toggleable view - change the font of my name like everyone says - add project demos and project pages ...

--- a/reactproject1/src/App.css
+++ b/reactproject1/src/App.css
@@ -16,6 +16,7 @@
 body, html, #root {
     overflow: visible;
     background-color: #040203;
+    color: #fff;
 }
 
 #timelineview {
